k8s/prometheus/prometheus_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: pfe
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
